--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/harleenkr/expressEndpoint#readme",
   "dependencies": {
+    "dockerode": "^2.5.0",
     "express": "^4.15.4"
   }
 }
