--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/harleenkr/expressEndpoint#readme",
   "dependencies": {
     "dockerode": "^2.5.0",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "router": "^1.3.1"
   }
 }
