--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dockerode": "^2.5.0",
     "express": "^4.15.4",
+    "rethinkdb": "^2.3.3",
     "router": "^1.3.1"
   }
 }
